--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
+*{
+ font-size:14px;
+}
 .App {
   text-align: center;
 }
-
+ul,li
+{
+  list-style-type: none !important;
+  font-size: 16px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
